[project]
name = "flyte"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "absl-py==2.1.0",
    "accessible-pygments==0.0.5",
    "adlfs==2024.7.0",
    "aenum==3.1.15",
    "aioboto3==13.2.0",
    "aiobotocore==2.15.2",
    "aiofiles==24.1.0",
    "aiohttp==3.9.5",
    "aioitertools==0.12.0",
    "aiosignal==1.3.1",
    "alabaster==0.7.16",
    "alembic==1.13.3",
    "altair==4.2.2",
    "aniso8601==9.0.1",
    "annotated-types==0.7.0",
    "ansicolors==1.1.8",
    "anyio==4.6.2.post1",
    "aplus==0.11.0",
    "appdirs==1.4.4",
    "appnope==0.1.4",
    "argon2-cffi==23.1.0",
    "argon2-cffi-bindings==21.2.0",
    "arrow==1.3.0",
    "asn1crypto==1.5.1",
    "astroid==3.3.5",
    "asttokens==2.4.1",
    "astunparse==1.6.3",
    "async-lru==2.0.4",
    "async-timeout==4.0.3",
    "attrs==24.2.0",
    "azure-core==1.31.0",
    "azure-datalake-store==0.0.53",
    "azure-identity==1.19.0",
    "azure-storage-blob==12.23.1",
    "Babel==2.14.0",
    "backports.tarfile==1.2.0",
    "bcrypt==4.2.0",
    "beautifulsoup4==4.12.3",
    "bigquery-magics==0.4.0",
    "blake3==0.4.1",
    "bleach==6.1.0",
    "blinker==1.8.2",
    "bokeh==3.4.2",
    "boto3==1.35.36",
    "botocore==1.35.36",
    "branca==0.7.2",
    "bravado==11.0.3",
    "bravado-core==5.17.1",
    "Brotli==1.1.0",
    "cached-property==1.5.2",
    "cachetools==5.5.0",
    "certifi==2024.8.30",
    "cffi==1.17.1",
    "cfgv==3.3.1",
    "charset-normalizer==3.4.0",
    "click==8.1.7",
    "click-plugins==1.1.1",
    "cligj==0.7.2",
    "cloudpickle==3.1.0",
    "codespell==2.3.0",
    "colorama==0.4.6",
    "comm==0.2.2",
    "commonmark==0.9.1",
    "contourpy==1.3.0",
    "croniter==3.0.3",
    "cryptography==43.0.1",
    "cycler==0.12.1",
    "cytoolz==1.0.0",
    "dacite==1.8.1",
    "dask==2024.8.0",
    "dask-expr==1.1.10",
    "databricks-cli==0.18.0",
    "databricks-sdk==0.34.0",
    "dataclasses-json==0.5.9",
    "datasets==2.14.4",
    "db-dtypes==1.2.0",
    "debugpy==1.8.7",
    "decorator==5.1.1",
    "defusedxml==0.7.1",
    "Deprecated==1.2.14",
    "dill==0.3.7",
    "diskcache==5.6.3",
    "distlib==0.3.9",
    "distributed==2024.8.0",
    "distro==1.9.0",
    "docker==7.1.0",
    "docker-pycreds==0.4.0",
    "docstring_parser==0.16",
    "docutils==0.21.2",
    "dolt-integrations==0.1.5",
    "doltcli==0.1.18",
    "duckdb==1.1.2",
    "durationpy==0.9",
    "entrypoints==0.4",
    "exceptiongroup==1.2.2",
    "executing==2.1.0",
    "fastavro==1.9.7",
    "fastjsonschema==2.20.0",
    "filelock==3.16.1",
    "fiona==1.10.1",
    "Flask==3.0.3",
    "flatbuffers==24.3.25",
    "folium==0.17.0",
    "fonttools==4.54.1",
    "fqdn==1.5.1",
    "frozendict==2.4.6",
    "frozenlist==1.4.1",
    "fsspec==2024.9.0",
    "furo==2024.8.6",
    "future==1.0.0",
    "gast==0.5.5",
    "gcsfs==2024.9.0.post1",
    "geopandas==0.14.4",
    "gitdb==4.0.11",
    "GitPython==3.1.43",
    "gmpy2==2.1.5",
    "google-api-core==2.23.0",
    "google-auth==2.35.0",
    "google-auth-oauthlib==1.2.1",
    "google-cloud==0.34.0",
    "google-cloud-bigquery==3.26.0",
    "google-cloud-bigquery-storage==2.27.0",
    "google-cloud-core==2.4.1",
    "google-cloud-storage==2.18.2",
    "google-crc32c==1.1.2",
    "google-pasta==0.2.0",
    "google-resumable-media==2.7.2",
    "googleapis-common-protos==1.66.0",
    "graphene==3.3",
    "graphql-core==3.2.5",
    "graphql-relay==3.2.0",
    "great-expectations==0.18.19",
    "greenlet==3.1.1",
    "grpcio==1.62.2",
    "grpcio-status==1.62.2",
    "gunicorn==22.0.0",
    "h11==0.14.0",
    "h2==4.1.0",
    "h5py==3.11.0",
    "hpack==4.0.0",
    "htmlmin==0.1.12",
    "httpcore==1.0.6",
    "httpx==0.27.2",
    "huggingface-hub==0.25.2",
    "hyperframe==6.0.1",
    "identify==2.6.1",
    "idna==3.10",
    "ImageHash==4.3.1",
    "imagesize==1.4.1",
    "importlib_metadata==8.5.0",
    "importlib_resources==6.4.5",
    "ipykernel==6.29.5",
    "ipython==8.18.1",
    "ipywidgets==8.1.5",
    "isodate==0.7.2",
    "isoduration==20.11.0",
    "itsdangerous==2.2.0",
    "jaraco.classes==3.4.0",
    "jaraco.context==6.0.1",
    "jaraco.functools==4.1.0",
    "jedi==0.19.1",
    "Jinja2==3.1.4",
    "jiter==0.6.1",
    "jmespath==1.0.1",
    "joblib==1.4.2",
    "json5==0.9.25",
    "jsonlines==4.0.0",
    "jsonpatch==1.33",
    "jsonpickle==3.3.0",
    "jsonpointer==3.0.0",
    "jsonref==1.1.0",
    "jsonschema==4.23.0",
    "jsonschema-specifications==2024.10.1",
    "jupyter==1.1.1",
    "jupyter-cache==1.0.0",
    "jupyter-console==6.6.3",
    "jupyter-events==0.10.0",
    "jupyter-lsp==2.2.5",
    "jupyter_client==8.6.3",
    "jupyter_core==5.7.2",
    "jupyter_server==2.14.2",
    "jupyter_server_terminals==0.5.3",
    "jupyterlab==4.2.5",
    "jupyterlab_pygments==0.3.0",
    "jupyterlab_server==2.27.3",
    "jupyterlab_widgets==3.0.13",
    "jupytext==1.16.4",
    "keras==3.6.0",
    "keyring==25.4.1",
    "kiwisolver==1.4.7",
    "kubernetes==31.0.0",
    "libclang==18.1.1",
    "llvmlite==0.43.0",
    "locket==1.0.0",
    "lz4==4.3.3",
    "makefun==1.15.6",
    "Mako==1.3.5",
    "mapclassify==2.8.1",
    "Markdown==3.6",
    "markdown-it-py==3.0.0",
    "MarkupSafe==3.0.1",
    "marshmallow==3.22.0",
    "marshmallow-enum==1.5.1",
    "marshmallow-jsonschema==0.13.0",
    "mashumaro==3.13.1",
    "matplotlib==3.9.2",
    "matplotlib-inline==0.1.7",
    "mdit-py-plugins==0.4.2",
    "mdurl==0.1.2",
    "mistune==3.0.2",
    "ml-dtypes==0.4.1",
    "mlflow==2.16.2",
    "mlflow-skinny==2.16.2",
    "modin==0.32.0",
    "monotonic==1.5",
    "more-itertools==10.5.0",
    "mpmath==1.3.0",
    "msal==1.31.0",
    "msal-extensions==1.2.0",
    "msgpack==1.1.0",
    "multidict==6.1.0",
    "multimethod==1.9.1",
    "multiprocess==0.70.15",
    "munkres==1.1.4",
    "mypy-extensions==1.0.0",
    "myst-nb==1.1.2",
    "myst-parser==4.0.0",
    "namex==0.0.8",
    "nbclient==0.10.0",
    "nbconvert==7.16.4",
    "nbformat==5.10.4",
    "neptune==1.12.0",
    "nest-asyncio==1.6.0",
    "networkx==3.2.1",
    "nodeenv==1.9.1",
    "notebook==7.2.2",
    "notebook_shim==0.2.4",
    "numba==0.60.0",
    "numpy==1.23.5",
    "oauthlib==3.2.2",
    "onnx==1.17.0",
    "onnxconverter-common==1.13.0",
    "openai==1.51.2",
    "opentelemetry-api==1.16.0",
    "opentelemetry-sdk==1.16.0",
    "opentelemetry-semantic-conventions==0.37b0",
    "opt_einsum==3.4.0",
    "optree==0.12.1",
    "overrides==7.7.0",
    "packaging==24.1",
    "pandas==2.2.3",
    "pandera==0.20.4",
    "pandocfilters==1.5.0",
    "papermill==2.6.0",
    "paramiko==3.5.0",
    "parso==0.8.4",
    "partd==1.4.2",
    "patsy==0.5.6",
    "perian==0.2.9",
    "pexpect==4.9.0",
    "phik==0.12.4",
    "pickleshare==0.7.5",
    "pillow==10.4.0",
    "pkgutil_resolve_name==1.3.10",
    "platformdirs==3.11.0",
    "plotly==5.24.1",
    "polars==1.9.0",
    "portalocker==2.10.1",
    "pre_commit==4.0.1",
    "progressbar2==4.5.0",
    "prometheus_client==0.21.0",
    "prometheus_flask_exporter==0.23.1",
    "prompt_toolkit==3.0.48",
    "propcache==0.2.0",
    "proto-plus==1.25.0",
    "protobuf==4.25.5",
    "protoc-gen-openapiv2==0.0.1",
    "psutil==6.0.0",
    "psycopg2-binary==2.9.9",
    "ptyprocess==0.7.0",
    "pure_eval==0.2.3",
    "py4j==0.10.9.7",
    "pyarrow==17.0.0",
    "pyarrow-hotfix==0.6",
    "pyasn1==0.6.1",
    "pyasn1_modules==0.4.1",
    "pycparser==2.22",
    "pydantic==2.9.2",
    "pydantic_core==2.23.4",
    "pydata-google-auth==1.8.2",
    "pydata-sphinx-theme==0.15.4",
    "Pygments==2.18.0",
    "PyJWT==2.9.0",
    "PyNaCl==1.5.0",
    "pyobjc-core==10.3.1",
    "pyobjc-framework-Cocoa==10.3.1",
    "pyOpenSSL==24.2.1",
    "pyparsing==3.2.0",
    "pyproj==3.6.1",
    "PySocks==1.7.1",
    "pyspark==3.5.1",
    "python-dateutil==2.9.0",
    "python-json-logger==2.0.7",
    "python-utils==3.8.2",
    "pytimeparse==1.1.8",
    "pytz==2024.1",
    "pyu2f==0.1.5",
    "PyWavelets==1.6.0",
    "PyYAML==6.0.2",
    "pyzmq==26.2.0",
    "querystring-parser==1.2.4",
    "ray==2.39.0",
    "readthedocs-sphinx-ext==2.2.5",
    "recommonmark==0.7.1",
    "referencing==0.35.1",
    "requests==2.32.3",
    "requests-oauthlib==2.0.0",
    "rfc3339-validator==0.1.4",
    "rfc3986-validator==0.1.1",
    "rfc3987==1.3.8",
    "rich==13.9.2",
    "rich-click==1.8.3",
    "rpds-py==0.20.0",
    "rsa==4.9",
    "Rtree==1.3.0",
    "ruamel.yaml==0.17.40",
    "ruamel.yaml.clib==0.2.8",
    "s3fs==2024.9.0",
    "s3transfer==0.10.3",
    "scikit-learn==1.5.2",
    "scipy==1.13.1",
    "seaborn==0.13.2",
    "Send2Trash==1.8.3",
    "sentry-sdk==2.16.0",
    "setproctitle==1.3.3",
    "shapely==2.0.6",
    "simplejson==3.19.3",
    "six==1.16.0",
    "skl2onnx==1.17.0",
    "smmap==5.0.0",
    "sniffio==1.3.1",
    "snowballstemmer==2.2.0",
    "snowflake-connector-python==3.12.2",
    "sortedcontainers==2.4.0",
    "soupsieve==2.5",
    "Sphinx==8.1.3",
    "sphinx-autoapi==3.3.2",
    "sphinx-basic-ng==1.0.0b2",
    "sphinx-click==6.0.0",
    "sphinx-code-include==1.4.0",
    "sphinx-copybutton==0.5.2",
    "sphinx-docsearch==0.1.0",
    "sphinx-issues==1.2.0",
    "sphinx-markdown-tables==0.0.17",
    "sphinx-prompt==1.4.0",
    "sphinx-tabs==3.4.7",
    "sphinx-tags==0.2.1",
    "sphinx_design==0.6.1",
    "sphinx_fontawesome==0.0.6",
    "sphinx_reredirects==0.1.5",
    "sphinxcontrib-applehelp==2.0.0",
    "sphinxcontrib-devhelp==2.0.0",
    "sphinxcontrib-htmlhelp==2.1.0",
    "sphinxcontrib-jsmath==1.0.1",
    "sphinxcontrib-mermaid==1.0.0",
    "sphinxcontrib-qthelp==2.0.0",
    "sphinxcontrib-serializinghtml==1.1.10",
    "sphinxcontrib-video==0.2.1",
    "sphinxcontrib-youtube==1.4.1",
    "sphinxext-remoteliteralinclude==0.4.0",
    "SQLAlchemy==2.0.35",
    "sqlparse==0.5.1",
    "stack-data==0.6.2",
    "statsd==4.0.1",
    "statsmodels==0.14.4",
    "stdlib-list==0.11.0",
    "swagger-spec-validator==3.0.4",
    "sympy==1.13.3",
    "tabulate==0.9.0",
    "tblib==3.0.0",
    "tenacity==9.0.0",
    "tensorboard==2.17.1",
    "tensorboard-data-server==0.7.0",
    "tensorflow==2.17.1",
    "tensorflow-estimator==2.15.0",
    "tensorflow-io-gcs-filesystem==0.37.1",
    "termcolor==2.5.0",
    "terminado==0.18.1",
    "tf2onnx==1.8.4",
    "threadpoolctl==3.5.0",
    "tinycss2==1.3.0",
    "toml==0.10.2",
    "tomli==2.0.2",
    "tomlkit==0.13.2",
    "toolz==1.0.0",
    "torch==2.4.1",
    "tornado==6.4.1",
    "tqdm==4.66.5",
    "traitlets==5.14.3",
    "typed-ast==1.5.5",
    "typeguard==4.3.0",
    "types-python-dateutil==2.9.0.20241003",
    "types-requests==2.30.0.0",
    "types-urllib3==1.26.25.14",
    "typing-inspect==0.9.0",
    "typing-utils==0.1.0",
    "typing_extensions==4.12.2",
    "tzdata==2024.2",
    "tzlocal==5.2",
    "ukkonen==1.0.1",
    "unicodedata2==15.1.0",
    "uri-template==1.3.0",
    "urllib3==1.26.19",
    "vaex-core==4.17.1",
    "virtualenv==20.26.6",
    "visions==0.7.6",
    "wandb==0.18.1",
    "wcwidth==0.2.13",
    "webcolors==24.8.0",
    "webencodings==0.5.1",
    "websocket-client==1.8.0",
    "Werkzeug==3.0.4",
    "whylabs-client==0.5.10",
    "whylogs==1.3.3",
    "whylogs-sketching==3.4.1.dev3",
    "widgetsnbextension==4.0.13",
    "wordcloud==1.9.3",
    "wrapt==1.16.0",
    "xxhash==3.5.0",
    "xyzservices==2024.9.0",
    "yarl==1.15.2",
    "ydata-profiling==4.10.0",
    "zict==3.0.0",
    "zipp==3.20.2",
]
