[package]
name = "flyteidl"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
homepage = "https://flyte.org"
repository = "https://github.com/flyteorg/flyte"
description = "Core Interface Definition for Flyte"
readme = "README.md"
keywords = ["ai", "ml", "orchestration"]
categories = ["science", "science::bioinformatics"]
include = [
    "**/*.rs",
    "Cargo.toml",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "gen_flyteidl"
path = "src/gen.rs"

[lib]
name = "_flyteidl_rust"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
prost = "0.12.3"
tonic-build = "0.11.0"
tonic = "0.11.0"
glob = "0.3.1"
pyo3_macro =  { version="0.1.3" }
pyo3 =  { version="0.22.0", git = "https://github.com/PyO3/pyo3.git", branch="main", features = [ "extension-module", "multiple-pymethods", "experimental-async", "gil-refs", "experimental-inspect" ] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }