[workspace]
members = [
    "pyo3_macro",
]

[package]
name = "flyteidl"
version = "0.1.7"
edition = "2021"
license-file = "LICENSE"
homepage = "https://flyte.org"
repository = "https://github.com/flyteorg/flyte"
description = "Core Interface Definition for Flyte"
readme = "README.md"
keywords = ["ai", "ml", "orchestration"]
categories = ["science", "science::bioinformatics"]
include = [
    "**/*.rs",
    "Cargo.toml",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "gen_flyteidl"
path = "src/gen.rs"

[lib]
name = "_flyteidl_rust"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
prost = "0.12.3"
tonic-build = "0.11.0"
tonic ={ version = "0.11.0", features = ["tls", "tls-roots"] }
glob = "0.3.1"
pyo3_macro = { path = "./pyo3_macro" }
pyo3 =  { version = "0.22.1", features = [ "extension-module", "multiple-pymethods", "experimental-async", "gil-refs", "experimental-inspect" ] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
serde_json = "1.0.120"
serde = { version = "1.0.204", features = ["serde_derive"]}
base64 = "0.22.1"
oauth2 ={ version = "4.4.2", features = [ "ureq" ] }
url = "2.5.0"
keyring = { version = "3.2.0", features = [ "vendored" ] }
openssl = { version = "0.10.66", features = [ "vendored" ]  } 
anyhow = "1.0.86"