[build-system]
requires = ["maturin>=1.5.1,<2.0"]
build-backend = "maturin"

[project]
name = "flyteidl_rust"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]
dynamic = ["version"]

[tool.maturin]
python-source = "python"
module-name = "flyteidl_rust._flyteidl_rust"
bindings = 'pyo3'
features = ["pyo3/extension-module"]