[package]
name = "worker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-channel = "2.1"
async-stream = "0.3"
bincode = "1.3"
clap = { version = "4.4.6", features = ["derive"] }
futures = "0.3"
tonic = "0.9"
prost = "0.11"
prost-types = "0.11"
pyo3 = "0.20.2"
tokio = { version = "1.0", features = ["macros", "net", "process", "rt", "rt-multi-thread"] }
tokio-util = { version = "0.7", features = ["codec"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.4.1", features = ["v4"] }

[profile.release]
strip = true
opt-level = "z"
lto = true
panic = "abort"
codegen-units = 1
