[workspace]
members = ["bridge", "executor"]
resolver = "2"

[workspace.package]
version = "0.1.5"

[workspace.dependencies]
bincode = "1.3"
futures = "0.3"
tokio = { version = "1.0", features = [
    "macros",
    "net",
    "process",
    "rt",
    "rt-multi-thread",
] }
tokio-util = { version = "0.7", features = ["codec"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
strip = true
opt-level = "z"
lto = true
panic = "abort"
codegen-units = 1
