[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "flyteidl2"
dynamic = ["version"]
authors = [{ name = "Union Eng", email = "support@union.ai" }]
description = "IDL for Flyte"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
dependencies = [
    'googleapis-common-protos',
    'protoc-gen-openapiv2',
    'protobuf>=4.21.1',
    "protovalidate>=1.0.0",
]
classifiers = [
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
license-files = ["licenses/*.txt", "LICENSE"]

[tool.setuptools]
include-package-data = true

# Intentionally leaving out the google folder, which contains googleapis-common-protos. This library is a dependency
# of too many google libraries including grpcio-status which flyte already depends on, so don't want to
# risk version conflicts.
[tool.setuptools.packages.find]
include = ["flyteidl2*", "buf*"]
exclude = ["build*"]

[tool.setuptools_scm]
root = "../../"
